--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -55,10 +55,9 @@
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">有効期限</label>
+          <label for="exp-date">有効期限</label>
           <span class="indispensable">必須</span>
         </div>
-        <label for="exp-date">有効期限</label>
         <div class='input-expiration-date-wrap'>
            <div id='exp-date' class="payjs-outer input-default">
            <%# ここにフォームが生成されます %>
@@ -67,10 +66,9 @@
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">セキュリティコード</label>
+          <label for="cvc">セキュリティコード</label>
           <span class="indispensable">必須</span>
         </div>
-        <label for="cvc">CVC</label>
         <div id='cvc' class="payjs-outer input-default">
     <%# ここにフォームが生成されます %>
         </div>
